--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.5
+head: 1.6
 branch:
 locks: strict
-	gilles: 1.5
+	gilles: 1.6
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 5;	selected revisions: 5
+total revisions: 6;	selected revisions: 6
 description:
 ----------------------------
-revision 1.5	locked by: gilles;
+revision 1.6	locked by: gilles;
+date: 2003/03/14 02:17:24;  author: gilles;  state: Exp;  lines: +5 -3
+Added positive exit if errors occurred.
+----------------------------
+revision 1.5
 date: 2003/03/14 01:20:37;  author: gilles;  state: Exp;  lines: +14 -6
 Better debug output.
 ----------------------------
