--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,21 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.6
+head: 1.7
 branch:
 locks: strict
-	gilles: 1.6
+	gilles: 1.7
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 6;	selected revisions: 6
+total revisions: 7;	selected revisions: 7
 description:
 ----------------------------
-revision 1.6	locked by: gilles;
+revision 1.7	locked by: gilles;
+date: 2003/03/15 03:40:54;  author: gilles;  state: Exp;  lines: +19 -9
+Added documentation.
+----------------------------
+revision 1.6
 date: 2003/03/14 02:17:24;  author: gilles;  state: Exp;  lines: +5 -3
 Added positive exit if errors occurred.
 ----------------------------
