--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.1 2003/03/12 23:14:27 gilles Exp gilles $
+# $Id: INSTALL,v 1.2 2003/03/15 03:41:31 gilles Exp gilles $
 # 
 # INSTALL file for ftpsync 
 
@@ -7,6 +7,16 @@ GETTING
 -------
 
 http://www.linux-france.org/prj/imapsync/dist/
+
+PREREQUISITES
+-------------
+
+You need : 
+- Perl 
+  try : perl -v
+
+- Mail::IMAPClient module 
+  try : perl -mMail::IMAPClient -e ''
 
 
 TESTING
