--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.6 $
+    $Revision: 1.7 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -10,7 +10,10 @@ INSTALL
      freshmeat record: http://freshmeat.net/projects/imapsync/
 
 SYNOPSIS
-      imapsync [options] SOURCE DEST
+      imapsync [options]
+
+      imapsync --help
+      imapsync
 
       imapsync [--host1 server1]  [--port1 <num>]
                [--user1 <string>] [--passfile1 <string>] 
@@ -21,9 +24,6 @@ SYNOPSIS
                [--dry]
                [--debug] [--debugimap]
                [--version] [--help]
-
-      imapsync --help
-      imapsync
   
 DESCRIPTION
     The command imapsync is a tool allowing incremental and recursive imap
@@ -35,7 +35,16 @@ DESCRIPTION
     imapsync is the adequate tool because it reduces the amount of data
     transfered by not transfering a given message if it is already on both
     sides. All flags are preserved, unread will stay unread, read will stay
-    read, deleted will stay deleted.
+    read, deleted will stay deleted. You can stop the transfert at any time
+    and restart it later, imapsync is adapted to a bad connection.
+
+    You can decide to delete the messages from the source mailbox after a
+    successful transfert (it is a good feature when migrating). In that
+    case, use the --delete option, and run imapsync again with the --expunge
+    option.
+
+    You can also just synchronize a mailbox A from another mailbox B in case
+    you just want to keep a "live" copy of B in A.
 
 OPTIONS
     Invoke: imapsync --help
@@ -48,7 +57,7 @@ HISTORY
     mailbox was well transfered and delete it after a good transfert.
     imapsync started its life being a copy_folder.pl patch. The tool
     copy_folder.pl comes from the Mail-IMAPClient-2.1.3 perl module tarball
-    source (in the examples/ directory).
+    source (in the examples/ directory of the tarball).
 
 EXAMPLES
     While working on imapsync parameters please run imapsync in dry mode (no
@@ -89,5 +98,5 @@ BUGS
 SIMILAR SOFTWARES
     None known. Feedback will be welcome.
 
-    $Id: imapsync,v 1.6 2003/03/14 02:17:24 gilles Exp gilles $
+    $Id: imapsync,v 1.7 2003/03/15 03:40:54 gilles Exp gilles $
 
