--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.7
+head: 1.10
 branch:
 locks: strict
-	gilles: 1.7
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 7;	selected revisions: 7
+total revisions: 10;	selected revisions: 10
 description:
 ----------------------------
-revision 1.7	locked by: gilles;
+revision 1.10
+date: 2003/05/05 22:37:48;  author: gilles;  state: Exp;  lines: +5 -5
+Updated --folder documentation.
+----------------------------
+revision 1.9
+date: 2003/05/05 22:33:50;  author: gilles;  state: Exp;  lines: +8 -7
+Commented INBOX prefix addition (cyrus "buggy" namespace)
+----------------------------
+revision 1.8
+date: 2003/05/05 21:05:14;  author: gilles;  state: Exp;  lines: +20 -4
+When folders are given with the --folder option then nested are
+also taken into account.
+----------------------------
+revision 1.7
 date: 2003/03/15 03:40:54;  author: gilles;  state: Exp;  lines: +19 -9
 Added documentation.
 ----------------------------
