--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.2 2003/03/15 03:41:31 gilles Exp gilles $
+# $Id: INSTALL,v 1.4 2003/05/05 22:42:51 gilles Exp $
 # 
 # INSTALL file for ftpsync 
 
@@ -19,6 +19,18 @@ You need :
   try : perl -mMail::IMAPClient -e ''
 
 
+INSTALLING
+----------
+To see what will be done, just run:
+
+make -n install
+
+To install imapsync, just run:
+
+make install
+
+or copy the file imapsync where you want it to be.
+
 TESTING
 -------
 
@@ -32,14 +44,7 @@ sh tests.sh
 
 The tests.sh script break on first failure ("set -e" directive).
 
-INSTALLING
-----------
-To see what will be done, just run:
+Since I added more tests you also need a remote imap server see the
+file tests.sh and help yourself. No time to make a universal test
+file.
 
-make -n install
-
-To install imapsync, just run:
-
-make install
-
-or copy the file imapsync where you want it to be.
