--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.7 $
+    $Revision: 1.10 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -98,5 +98,5 @@ BUGS
 SIMILAR SOFTWARES
     None known. Feedback will be welcome.
 
-    $Id: imapsync,v 1.7 2003/03/15 03:40:54 gilles Exp gilles $
+    $Id: imapsync,v 1.10 2003/05/05 22:37:48 gilles Exp $
 
