--- a/ChangeLog
+++ b/ChangeLog
@@ -1,19 +1,25 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.11
+head: 1.12
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 11;	selected revisions: 11
+total revisions: 12;	selected revisions: 12
 description:
+----------------------------
+revision 1.12
+date: 2003/07/07 20:19:58;  author: gilles;  state: Exp;  lines: +20 -4
+Updated documentation :
+ - Added IMAP SERVERS section (Success and bad stories).
+ - Updated SIMILAR SOFTWARES section.
 ----------------------------
 revision 1.11
 date: 2003/07/04 23:32:23;  author: gilles;  state: Exp;  lines: +7 -5
 - use of namespace separator,
-  Thanks to Sebastien Namèhe.
+  Thanks to Sebastien Namèche.
 ----------------------------
 revision 1.10
 date: 2003/05/05 22:37:48;  author: gilles;  state: Exp;  lines: +5 -5
