--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.11 $
+    $Revision: 1.12 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -95,8 +95,24 @@ LICENSE
 BUGS
     No known bug. Report any bugs to the author: lamiral@linux-france.org
 
-SIMILAR SOFTWARES
-    None known. Feedback will be welcome.
+IMAP SERVERS
+    Success stories reported :
 
-    $Id: imapsync,v 1.11 2003/07/04 23:32:23 gilles Exp $
+     - Courier IMAP 1.5.1
+     - Cyrus IMAP 1.5, 1.6, 2.1
+     - Netscape Mail Server 3.6 (Wintel)
+     - CommunicatePro server (Redhat 8.0)
+
+    Please report to the author any success or bad story with imapsync and
+    don't forget to mention the IMAP server software names and version on
+    both sides. This will help future users.
+
+SIMILAR SOFTWARES
+      offlineimap : http://gopher.quux.org:70/devel/offlineimap/
+      mailsync    : http://mailsync.sourceforge.net/
+      imapxfer    : ?
+
+    Feedback will be welcome.
+
+    $Id: imapsync,v 1.12 2003/07/07 20:19:58 gilles Exp $
 
