--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.13
+head: 1.14
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 13;	selected revisions: 13
+total revisions: 14;	selected revisions: 14
 description:
+----------------------------
+revision 1.14
+date: 2003/07/17 11:58:56;  author: gilles;  state: Exp;  lines: +14 -12
+- Fixed port2 variable.
+  Thanks again Patrick C. F. Ernzer
 ----------------------------
 revision 1.13
 date: 2003/07/16 17:28:59;  author: gilles;  state: Exp;  lines: +6 -3
