--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.12
+head: 1.13
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 12;	selected revisions: 12
+total revisions: 13;	selected revisions: 13
 description:
+----------------------------
+revision 1.13
+date: 2003/07/16 17:28:59;  author: gilles;  state: Exp;  lines: +6 -3
+- fix "you forgot to honour the --port option"
+  Thanks to Patrick C. F. Ernzer
 ----------------------------
 revision 1.12
 date: 2003/07/07 20:19:58;  author: gilles;  state: Exp;  lines: +20 -4
