--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.10
+head: 1.11
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 10;	selected revisions: 10
+total revisions: 11;	selected revisions: 11
 description:
+----------------------------
+revision 1.11
+date: 2003/07/04 23:32:23;  author: gilles;  state: Exp;  lines: +7 -5
+- use of namespace separator,
+  Thanks to Sebastien Namèhe.
 ----------------------------
 revision 1.10
 date: 2003/05/05 22:37:48;  author: gilles;  state: Exp;  lines: +5 -5
