--- a/TODO
+++ b/TODO
@@ -7,3 +7,5 @@ Tested  on
 > the destination one Cyrus imapd 2.1.12.
 by Per Steinar Iversen  <PerSteinar.Iversen@adm.hio.no>
 
+Add a list of well tested imap servers.
+
