--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.20
+head: 1.22
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 20;	selected revisions: 20
+total revisions: 22;	selected revisions: 22
 description:
+----------------------------
+revision 1.22
+date: 2003/08/22 17:17:18;  author: gilles;  state: Exp;  lines: +22 -17
+Added code to underdstand why Daniele can't create folders
+----------------------------
+revision 1.21
+date: 2003/08/22 16:25:07;  author: gilles;  state: Exp;  lines: +4 -9
+Removed commented code adding INBOX. prefix
 ----------------------------
 revision 1.20
 date: 2003/08/21 16:31:53;  author: gilles;  state: Exp;  lines: +6 -5
