--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,37 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.15
+head: 1.20
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 15;	selected revisions: 15
+total revisions: 20;	selected revisions: 20
 description:
+----------------------------
+revision 1.20
+date: 2003/08/21 16:31:53;  author: gilles;  state: Exp;  lines: +6 -5
+Fixed banner output. Must be after getoptions because of --version
+----------------------------
+revision 1.19
+date: 2003/08/21 16:18:32;  author: gilles;  state: Exp;  lines: +11 -8
+Added code and comment to understand why message uid was not printed
+ Solution : some imap server don't have UIDPLIS Capability
+----------------------------
+revision 1.18
+date: 2003/08/21 14:37:45;  author: gilles;  state: Exp;  lines: +5 -5
+Removed unuseful param in $from->folders call
+----------------------------
+revision 1.17
+date: 2003/08/21 13:49:05;  author: gilles;  state: Exp;  lines: +5 -4
+Fixed banner
+----------------------------
+revision 1.16
+date: 2003/08/21 13:47:14;  author: gilles;  state: Exp;  lines: +12 -11
+Added imapxfer url, thanks to Daniele Frijia.
+Added [] to see blank caracter in folder names.
+Added a banner with imapsync version.
 ----------------------------
 revision 1.15
 date: 2003/07/17 12:22:23;  author: gilles;  state: Exp;  lines: +4 -4
