--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.15 $
+    $Revision: 1.20 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -110,9 +110,10 @@ IMAP SERVERS
 SIMILAR SOFTWARES
       offlineimap : http://gopher.quux.org:70/devel/offlineimap/
       mailsync    : http://mailsync.sourceforge.net/
-      imapxfer    : ?
+      imapxfer    : http://www.washington.edu/imap/
+                    part of the imap-utils from UW.
 
-    Feedback will be welcome.
+    Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.15 2003/07/17 12:22:23 gilles Exp $
+    $Id: imapsync,v 1.20 2003/08/21 16:31:53 gilles Exp $
 
