--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.14
+head: 1.15
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 14;	selected revisions: 14
+total revisions: 15;	selected revisions: 15
 description:
+----------------------------
+revision 1.15
+date: 2003/07/17 12:22:23;  author: gilles;  state: Exp;  lines: +4 -4
+Added imap debug mode to server2
 ----------------------------
 revision 1.14
 date: 2003/07/17 11:58:56;  author: gilles;  state: Exp;  lines: +14 -12
