--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.22
+head: 1.25
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 22;	selected revisions: 22
+total revisions: 25;	selected revisions: 25
 description:
+----------------------------
+revision 1.25
+date: 2003/08/23 01:44:33;  author: gilles;  state: Exp;  lines: +18 -12
+Fixed pb with no UIDPLUS and flags
+----------------------------
+revision 1.24
+date: 2003/08/23 00:05:57;  author: gilles;  state: Exp;  lines: +13 -5
+Added server software output
+Added server capability output
+----------------------------
+revision 1.23
+date: 2003/08/22 21:55:01;  author: gilles;  state: Exp;  lines: +37 -8
+Added code to better sync flags
 ----------------------------
 revision 1.22
 date: 2003/08/22 17:17:18;  author: gilles;  state: Exp;  lines: +22 -17
