--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.27
+head: 1.28
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 27;	selected revisions: 27
+total revisions: 28;	selected revisions: 28
 description:
+----------------------------
+revision 1.28
+date: 2003/08/24 01:55:25;  author: gilles;  state: Exp;  lines: +8 -30
+Set the flags using append_strings() instead of store()
+Flags are well set since the first run now.
 ----------------------------
 revision 1.27
 date: 2003/08/23 14:40:57;  author: gilles;  state: Exp;  lines: +4 -10
