--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.29
+head: 1.30
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 29;	selected revisions: 29
+total revisions: 30;	selected revisions: 30
 description:
+----------------------------
+revision 1.30
+date: 2003/08/27 16:40:38;  author: gilles;  state: Exp;  lines: +9 -5
+Added output separators
+Fixed bad output fot "To folders"
 ----------------------------
 revision 1.29
 date: 2003/08/24 02:01:28;  author: gilles;  state: Exp;  lines: +6 -4
