--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.25
+head: 1.27
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 25;	selected revisions: 25
+total revisions: 27;	selected revisions: 27
 description:
+----------------------------
+revision 1.27
+date: 2003/08/23 14:40:57;  author: gilles;  state: Exp;  lines: +4 -10
+Removed unused code
+----------------------------
+revision 1.26
+date: 2003/08/23 14:36:58;  author: gilles;  state: Exp;  lines: +18 -11
+Updated doc with imap servers, freshmeat url
 ----------------------------
 revision 1.25
 date: 2003/08/23 01:44:33;  author: gilles;  state: Exp;  lines: +18 -12
