--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.25 $
+    $Revision: 1.27 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -93,7 +93,12 @@ LICENSE
     the web site http://www.gnu.org/licenses/licenses.html
 
 BUGS
-    No known bug. Report any bugs to the author: lamiral@linux-france.org
+    No known serious bug.
+
+    Flags : with some IMAP servers the flags are not very well copied the
+    first time. Run imapsync twice if you want the flags set correctly.
+
+    Report any bugs to the author: lamiral@linux-france.org
 
 IMAP SERVERS
     Success stories reported :
@@ -102,10 +107,14 @@ IMAP SERVERS
      - Cyrus IMAP 1.5, 1.6, 2.1
      - Netscape Mail Server 3.6 (Wintel)
      - CommunicatePro server (Redhat 8.0)
+     - SunONE Messaging server 5.2
+     - iPlanet Messaging server 4.15
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
     both sides. This will help future users.
+
+    Rate imapsync : http://freshmeat.net/projects/imapsync/
 
 SIMILAR SOFTWARES
       offlineimap : http://gopher.quux.org:70/devel/offlineimap/
@@ -115,5 +124,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.25 2003/08/23 01:44:33 gilles Exp $
+    $Id: imapsync,v 1.27 2003/08/23 14:40:57 gilles Exp $
 
