--- a/TODO
+++ b/TODO
@@ -1,11 +1,13 @@
 
 Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
 see authenticate in IMAPClient.pm
+Test the new Mail::IMAPClient (2.1.4 -> 2.2.8 or sup)
 
-Tested  on
-> The source imap server runs Cyrus imapd 1.6.22, 
-> the destination one Cyrus imapd 2.1.12.
-by Per Steinar Iversen  <PerSteinar.Iversen@adm.hio.no>
+Update the list of tested IMAP servers (successes and failures).
 
-Add a list of well tested imap servers.
+Update documentation about setting flags.
+Make setting flags works the FIRST time.
+-> Use append_string instead of append
+
+Add a CREDITS file.
 
