--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.28
+head: 1.29
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 28;	selected revisions: 28
+total revisions: 29;	selected revisions: 29
 description:
+----------------------------
+revision 1.29
+date: 2003/08/24 02:01:28;  author: gilles;  state: Exp;  lines: +6 -4
+Updated doc about fixed flags first time bug.
 ----------------------------
 revision 1.28
 date: 2003/08/24 01:55:25;  author: gilles;  state: Exp;  lines: +8 -30
