--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.28 $
+    $Revision: 1.29 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -97,6 +97,8 @@ BUGS
 
     Flags : with some IMAP servers the flags are not very well copied the
     first time. Run imapsync twice if you want the flags set correctly.
+    (fixed since 1.28 release but wait for a time before removing those
+    lines)
 
     Report any bugs to the author: lamiral@linux-france.org
 
@@ -124,5 +126,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.28 2003/08/24 01:55:25 gilles Exp $
+    $Id: imapsync,v 1.29 2003/08/24 02:01:28 gilles Exp $
 
