--- a/TODO
+++ b/TODO
@@ -1,13 +1,11 @@
+TODO file for imapsync
+----------------------
 
 Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
 see authenticate in IMAPClient.pm
 Test the new Mail::IMAPClient (2.1.4 -> 2.2.8 or sup)
 
 Update the list of tested IMAP servers (successes and failures).
-
-Update documentation about setting flags.
-Make setting flags works the FIRST time.
--> Use append_string instead of append
 
 Add a CREDITS file.
 
