--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,40 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.31
+head: 1.37
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 31;	selected revisions: 31
+total revisions: 37;	selected revisions: 37
 description:
+----------------------------
+revision 1.37
+date: 2003/10/16 01:37:52;  author: gilles;  state: Exp;  lines: +9 -8
+Added a loop in case there is several identical key header
+----------------------------
+revision 1.36
+date: 2003/10/16 01:23:51;  author: gilles;  state: Exp;  lines: +4 -38
+Removed commented code in parse section.
+----------------------------
+revision 1.35
+date: 2003/10/16 01:22:52;  author: gilles;  state: Exp;  lines: +20 -19
+Use of parse_header_msg() in "to" server
+----------------------------
+revision 1.34
+date: 2003/10/16 01:18:07;  author: gilles;  state: Exp;  lines: +49 -24
+Wrote parse_header_msg()
+Use of parse_header_msg for "from" server.
+----------------------------
+revision 1.33
+date: 2003/10/16 00:47:43;  author: gilles;  state: Exp;  lines: +6 -6
+Added prefix in debug output for headers
+----------------------------
+revision 1.32
+date: 2003/10/16 00:36:17;  author: gilles;  state: Exp;  lines: +17 -5
+Added code to check internal dates
+Commented code about internal dates
 ----------------------------
 revision 1.31
 date: 2003/08/28 16:07:28;  author: gilles;  state: Exp;  lines: +5 -5
