--- a/TODO
+++ b/TODO
@@ -9,3 +9,11 @@ Update the list of tested IMAP servers (successes and failures).
 
 Add a CREDITS file.
 
+Pb with namespace INBOX.
+http://www.inter7.com/courierimap/FAQ.html#namespace
+http://www.rfc-editor.org/rfc/rfc2342.txt
+
+Pb with date
+
+Pb with \Recent flag
+
