--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,18 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.30
+head: 1.31
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 30;	selected revisions: 30
+total revisions: 31;	selected revisions: 31
 description:
+----------------------------
+revision 1.31
+date: 2003/08/28 16:07:28;  author: gilles;  state: Exp;  lines: +5 -5
+Fixed bug converting separators
 ----------------------------
 revision 1.30
 date: 2003/08/27 16:40:38;  author: gilles;  state: Exp;  lines: +9 -5
