--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,27 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.37
+head: 1.40
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 37;	selected revisions: 37
+total revisions: 40;	selected revisions: 40
 description:
+----------------------------
+revision 1.40
+date: 2003/10/17 01:34:59;  author: gilles;  state: Exp;  lines: +5 -5
+Added condition to add prefix2
+----------------------------
+revision 1.39
+date: 2003/10/17 01:26:20;  author: gilles;  state: Exp;  lines: +4 -14
+Removed commented code
+----------------------------
+revision 1.38
+date: 2003/10/17 01:25:40;  author: gilles;  state: Exp;  lines: +12 -7
+Added --prefix2 option for the INBOX. namespace problem
+with cyrus imap servers.
 ----------------------------
 revision 1.37
 date: 2003/10/16 01:37:52;  author: gilles;  state: Exp;  lines: +9 -8
