--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.37 $
+    $Revision: 1.40 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -19,7 +19,8 @@ SYNOPSIS
                [--user1 <string>] [--passfile1 <string>] 
                [--host2 server2]  [--port2 <num>]
                [--user2 <string>] [--passfile2 <string>] 
-               [--folder <string> --folder <string> ...] 
+               [--folder <string> --folder <string> ...]
+               [--prefix2 <string>]
                [--delete] [--expunge]
                [--dry]
                [--debug] [--debugimap]
@@ -126,5 +127,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.37 2003/10/16 01:37:52 gilles Exp $
+    $Id: imapsync,v 1.40 2003/10/17 01:34:59 gilles Exp $
 
