--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,23 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.40
+head: 1.42
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 40;	selected revisions: 40
+total revisions: 42;	selected revisions: 42
 description:
+----------------------------
+revision 1.42
+date: 2003/10/20 22:56:57;  author: gilles;  state: Exp;  lines: +27 -16
+Added --syncinternaldates option
+----------------------------
+revision 1.41
+date: 2003/10/20 19:19:52;  author: gilles;  state: Exp;  lines: +9 -4
+RFC 2060: \Recent can not be altered by the client.
+Thanks to Tomasz Orzechowski <tomek AT lj.pl>
 ----------------------------
 revision 1.40
 date: 2003/10/17 01:34:59;  author: gilles;  state: Exp;  lines: +5 -5
