--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.40 $
+    $Revision: 1.42 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -21,6 +21,7 @@ SYNOPSIS
                [--user2 <string>] [--passfile2 <string>] 
                [--folder <string> --folder <string> ...]
                [--prefix2 <string>]
+               [--syncinternaldate]
                [--delete] [--expunge]
                [--dry]
                [--debug] [--debugimap]
@@ -112,10 +113,16 @@ IMAP SERVERS
      - CommunicatePro server (Redhat 8.0)
      - SunONE Messaging server 5.2
      - iPlanet Messaging server 4.15
+     - dovecot ?.?? 
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
-    both sides. This will help future users.
+    both sides. This will help future users. To help the author maintaining
+    this section report the two lines at the begining of the output if they
+    are useful to know the softwares. Example:
+
+     From software :* OK louloutte Cyrus IMAP4 v1.5.19 server ready
+     To   software :* OK Courier-IMAP ready
 
     Rate imapsync : http://freshmeat.net/projects/imapsync/
 
@@ -127,5 +134,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.40 2003/10/17 01:34:59 gilles Exp $
+    $Id: imapsync,v 1.42 2003/10/20 22:56:57 gilles Exp $
 
