--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.42
+head: 1.43
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 42;	selected revisions: 42
+total revisions: 43;	selected revisions: 43
 description:
+----------------------------
+revision 1.43
+date: 2003/11/11 02:18:45;  author: gilles;  state: Exp;  lines: +35 -8
+Added --sep1 and --sep2 options in case NAMESPACE can not be
+used
+Wrote get_separator() function.
 ----------------------------
 revision 1.42
 date: 2003/10/20 22:56:57;  author: gilles;  state: Exp;  lines: +27 -16
