--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.42 $
+    $Revision: 1.43 $
 
 INSTALL
      Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
@@ -21,6 +21,8 @@ SYNOPSIS
                [--user2 <string>] [--passfile2 <string>] 
                [--folder <string> --folder <string> ...]
                [--prefix2 <string>]
+               [--sep1 <char>]
+               [--sep2 <char>]
                [--syncinternaldate]
                [--delete] [--expunge]
                [--dry]
@@ -134,5 +136,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.42 2003/10/20 22:56:57 gilles Exp $
+    $Id: imapsync,v 1.43 2003/11/11 02:18:45 gilles Exp $
 
