--- a/TODO
+++ b/TODO
@@ -9,11 +9,15 @@ Update the list of tested IMAP servers (successes and failures).
 
 Add a CREDITS file.
 
-Pb with namespace INBOX.
+Pb if "to separator" is in "from folder" name.
+Have to choose a caracter != to separator and
+not in from folders.
+
+DONE. Pb with namespace INBOX.
 http://www.inter7.com/courierimap/FAQ.html#namespace
 http://www.rfc-editor.org/rfc/rfc2342.txt
 
-Pb with date
+DONE. Pb with date
 
-Pb with \Recent flag
+DONE. Pb with \Recent flag
 
