--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,29 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.44
+head: 1.47
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 44;	selected revisions: 44
+total revisions: 47;	selected revisions: 47
 description:
+----------------------------
+revision 1.47
+date: 2003/11/21 03:15:31;  author: gilles;  state: Exp;  lines: +19 -4
+Added a SECURITY pod doc section.
+----------------------------
+revision 1.46
+date: 2003/11/21 02:52:37;  author: gilles;  state: Exp;  lines: +6 -4
+Documented --subscribed option in usage()
+Add GPL link
+----------------------------
+revision 1.45
+date: 2003/11/21 02:42:49;  author: gilles;  state: Exp;  lines: +28 -8
+Added usage of sysexists constants.
+Exit in error if a problem occurs with options.
+Added --subscribed option
 ----------------------------
 revision 1.44
 date: 2003/11/11 18:01:49;  author: gilles;  state: Exp;  lines: +5 -5
