--- a/INSTALL
+++ b/INSTALL
@@ -1,4 +1,4 @@
-# $Id: INSTALL,v 1.4 2003/05/05 22:42:51 gilles Exp $
+# $Id: INSTALL,v 1.6 2003/11/21 03:13:52 gilles Exp gilles $
 # 
 # INSTALL file for ftpsync 
 
@@ -15,9 +15,21 @@ You need :
 - Perl 
   try : perl -v
 
-- Mail::IMAPClient module 
-  try : perl -mMail::IMAPClient -e ''
+  Get Perl here:
+  http://www.perl.org/
 
+- Perl Mail::IMAPClient module 
+  try : perl -mMail::IMAPClient -e ''
+  
+  Get the Mail::IMAPClient module here:
+  http://search.cpan.org/
+  http://search.cpan.org/~djkernen/
+  http://search.cpan.org/~djkernen/Mail-IMAPClient-2.2.9/
+  
+  In fact I use Mail-IMAPClient-2.1.4
+  To know the version you have on your system try :
+  perl -mMail::IMAPClient -e 'print $Mail::IMAPClient::VERSION, "\n"'
+  
 
 INSTALLING
 ----------
@@ -34,6 +46,7 @@ or copy the file imapsync where you want it to be.
 TESTING
 -------
 
+The test will break as they are home specific.
 You need a running imap server on localhost with two accounts
 toto@est.belle with a password located in the file /var/tmp/secret1
 titi@est.belle with a password located in the file /var/tmp/secret2
