--- a/TODO
+++ b/TODO
@@ -5,19 +5,23 @@ Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
 see authenticate in IMAPClient.pm
 Test the new Mail::IMAPClient (2.1.4 -> 2.2.8 or sup)
 
-Update the list of tested IMAP servers (successes and failures).
-
-Add a CREDITS file.
-
 Pb if "to separator" is in "from folder" name.
 Have to choose a caracter != to separator and
 not in from folders.
 
-DONE. Pb with namespace INBOX.
+DONE. Add a --subscribed option.
+
+DONE. Add a CREDITS file.
+
+DONE. Pb with namespace INBOX. Some IMAP servers 
+don't have this CAPABILITY
 http://www.inter7.com/courierimap/FAQ.html#namespace
 http://www.rfc-editor.org/rfc/rfc2342.txt
 
 DONE. Pb with date
 
 DONE. Pb with \Recent flag
+
+DONE. Add the list of tested IMAP servers (successes and failures).
+
 
