--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,19 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.43
+head: 1.44
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 43;	selected revisions: 43
+total revisions: 44;	selected revisions: 44
 description:
+----------------------------
+revision 1.44
+date: 2003/11/11 18:01:49;  author: gilles;  state: Exp;  lines: +5 -5
+Fixed get_separator call bug for "to" server.
+Thanks Eric Yung.
 ----------------------------
 revision 1.43
 date: 2003/11/11 02:18:45;  author: gilles;  state: Exp;  lines: +35 -8
