--- a/ChangeLog
+++ b/ChangeLog
@@ -1,17 +1,38 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.48
+head: 1.53
 branch:
 locks: strict
-	gilles: 1.48
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 48;	selected revisions: 48
+total revisions: 53;	selected revisions: 53
 description:
 ----------------------------
-revision 1.48	locked by: gilles;
+revision 1.53
+date: 2003/12/12 17:34:45;  author: gilles;  state: Exp;  lines: +17 -6
+Added comments.
+Added subscribe code.
+----------------------------
+revision 1.52
+date: 2003/12/12 17:16:51;  author: gilles;  state: Exp;  lines: +12 -4
+Use join() for the banner (less ugly).
+----------------------------
+revision 1.51
+date: 2003/12/12 17:12:39;  author: gilles;  state: Exp;  lines: +25 -9
+Updated the INSTALL pod doc.
+Prepared the --subscribe option.
+----------------------------
+revision 1.50
+date: 2003/12/01 16:32:15;  author: gilles;  state: Exp;  lines: +6 -4
+Added Mail::IMAPClient::VERSION
+----------------------------
+revision 1.49
+date: 2003/12/01 16:19:46;  author: gilles;  state: Exp;  lines: +6 -6
+Updated success stories.
+----------------------------
+revision 1.48
 date: 2003/11/21 04:23:10;  author: gilles;  state: Exp;  lines: +26 -4
 Added "HUGE MIGRATION" pod section. (Thanks
         Tommi Lätti
