--- a/README
+++ b/README
@@ -1,13 +1,22 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.48 $
+    $Revision: 1.53 $
 
 INSTALL
-     Get imapsync at http://www.linux-france.org/prj/imapsync/dist/
-     tar xzvf  imapsync-x.xx.tgz  # x.xx is the version number
-     Read the INSTALL file.
-     freshmeat record: http://freshmeat.net/projects/imapsync/
+     Get imapsync at
+     http://www.linux-france.org/prj/imapsync/dist/ 
+
+     You'll find a compressed tarball called imapsync-x.xx.tgz
+     where x.xx is the version number. Untar the tarball where
+     you want :
+
+     tar xzvf  imapsync-x.xx.tgz  
+
+     Go into the directory imapsync-x.xx and read the INSTALL
+     file.
+
+     The freshmeat record is http://freshmeat.net/projects/imapsync/
 
 SYNOPSIS
       imapsync [options]
@@ -121,8 +130,8 @@ BUGS
 IMAP SERVERS
     Success stories reported :
 
-     - Courier IMAP 1.5.1
-     - Cyrus IMAP 1.5, 1.6, 2.1
+     - Courier IMAP 1.5.1, 2.1.1
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1
      - Netscape Mail Server 3.6 (Wintel)
      - CommunicatePro server (Redhat 8.0)
      - SunONE Messaging server 5.2
@@ -157,6 +166,7 @@ HUGE MIGRATION
 
     Welcome in shell programming !
 
+Hacking
 SIMILAR SOFTWARES
       offlineimap : http://gopher.quux.org:70/devel/offlineimap/
       mailsync    : http://mailsync.sourceforge.net/
@@ -165,5 +175,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.48 2003/11/21 04:23:10 gilles Exp gilles $
+    $Id: imapsync,v 1.53 2003/12/12 17:34:45 gilles Exp $
 
