--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,22 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.53
+head: 1.55
 branch:
 locks: strict
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 53;	selected revisions: 53
+total revisions: 55;	selected revisions: 55
 description:
+----------------------------
+revision 1.55
+date: 2003/12/13 18:16:56;  author: gilles;  state: Exp;  lines: +30 -15
+Better subscribe behavior
+----------------------------
+revision 1.54
+date: 2003/12/12 18:13:01;  author: gilles;  state: Exp;  lines: +7 -6
+Updated "Success stories".
 ----------------------------
 revision 1.53
 date: 2003/12/12 17:34:45;  author: gilles;  state: Exp;  lines: +17 -6
