--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 NAME
     imapsync - synchronize mailboxes between two imap servers.
 
-    $Revision: 1.53 $
+    $Revision: 1.55 $
 
 INSTALL
      Get imapsync at
@@ -34,7 +34,7 @@ SYNOPSIS
                [--sep2 <char>]
                [--syncinternaldate]
                [--delete] [--expunge]
-               [--subscribed]
+               [--subscribed] [--subscribe]
                [--dry]
                [--debug] [--debugimap]
                [--version] [--help]
@@ -131,12 +131,13 @@ IMAP SERVERS
     Success stories reported :
 
      - Courier IMAP 1.5.1, 2.1.1
-     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1
+     - Cyrus IMAP 1.5, 1.6, 2.1, 2.1.15, 2.2.1, Cyrus 2.2.2-BETA
      - Netscape Mail Server 3.6 (Wintel)
      - CommunicatePro server (Redhat 8.0)
      - SunONE Messaging server 5.2
      - iPlanet Messaging server 4.15
      - dovecot ?.?? 
+     - UW-imap servers (imap-2000b) rijkkramer IMAP4rev1 2000.287
 
     Please report to the author any success or bad story with imapsync and
     don't forget to mention the IMAP server software names and version on
@@ -150,6 +151,9 @@ IMAP SERVERS
     Rate imapsync : http://freshmeat.net/projects/imapsync/
 
 HUGE MIGRATION
+    Have a special attention on options --subscribed --subscribe --delete
+    --expunge
+
     If you have many mailboxes to migrate think about a little shell
     program. Write a file called file.csv (for example) containing users and
     passwords. The separator used in this example is ';'
@@ -175,5 +179,5 @@ SIMILAR SOFTWARES
 
     Feedback (good or bad) will be always welcome.
 
-    $Id: imapsync,v 1.53 2003/12/12 17:34:45 gilles Exp $
+    $Id: imapsync,v 1.55 2003/12/13 18:16:56 gilles Exp $
 
