--- a/TODO
+++ b/TODO
@@ -1,15 +1,22 @@
 TODO file for imapsync
 ----------------------
 
+Add --prefix1 option. Don't know what is the need exactly.
+
 Add SASL support MD5 : DIGEST-MD5 and CRAM-MD5
 see authenticate in IMAPClient.pm
 Test the new Mail::IMAPClient (2.1.4 -> 2.2.8 or sup)
 
 Pb if "to separator" is in "from folder" name.
 Have to choose a caracter != to separator and
-not in from folders.
+not in from folders. The solution can be to
+just exchange the two caracters.
 
-DONE. Add a --subscribed option.
+DONE. Add a --subscribe option to subscribe folders on the
+      destination server.
+
+DONE. Add a --subscribed option to transfert only subscribed
+      folder on the source server.
 
 DONE. Add a CREDITS file.
 
