--- a/ChangeLog
+++ b/ChangeLog
@@ -1,14 +1,20 @@
 
 RCS file: RCS/imapsync,v
 Working file: imapsync
-head: 1.47
+head: 1.48
 branch:
 locks: strict
+	gilles: 1.48
 access list:
 symbolic names:
 keyword substitution: kv
-total revisions: 47;	selected revisions: 47
+total revisions: 48;	selected revisions: 48
 description:
+----------------------------
+revision 1.48	locked by: gilles;
+date: 2003/11/21 04:23:10;  author: gilles;  state: Exp;  lines: +26 -4
+Added "HUGE MIGRATION" pod section. (Thanks
+        Tommi Lätti
 ----------------------------
 revision 1.47
 date: 2003/11/21 03:15:31;  author: gilles;  state: Exp;  lines: +19 -4
